# my-pc-info

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: gen_images.py  template.nsi
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/wix/: icon.wxs
src/components/: AlertsSection.tsx  DetailPanel.tsx  HardwareCard.tsx  HealthReport.tsx  LiveMonitor.tsx  SpecChecker.tsx  SpecImageExport.tsx  StorageCard.tsx  UpgradeGuide.tsx
src/data/: mockHardware.ts  requirements.ts
src/hooks/: useHardwareInfo.ts  useLiveMetrics.ts  useTheme.ts  useUpdater.ts
src/types/: hardware.ts
src/utils/: appKind.ts  exportImage.ts  specChecker.ts
