[package]
name = "my-pc-info"
version = "0.1.0"
description = "내 PC 한눈에 - Windows Hardware Info Viewer"
authors = []
edition = "2021"

[lib]
name = "my_pc_info_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
